# Mexc-Gurdian

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/mexc_guardian/: config.py  db.py  main.py  mcp_server.py  models.py  monitor.py  state_store.py  telegram_client.py  web.py
